system/monitoring/resources/mackerel-agent.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: mackerel-agent

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mackerel-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mackerel-agent
    spec:
      hostNetwork: true
      hostPID: true
      hostIPC: true
      serviceAccountName: mackerel-agent-sa
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - name: mackerel-agent
          image: mackerel/mackerel-agent:0.87.1
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: dev-disk
              mountPath: /dev/disk
              readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: agent-root
              mountPath: /var/lib/mackerel-agent
      volumes:
        - name: rootfs
          hostPath:
            path: /
        - name: dev-disk
          hostPath:
            path: /dev/disk
        - name: sys
          hostPath:
            path: /sys
        - name: agent-root
          hostPath:
            path: /var/lib/mackerel-agent
            type: DirectoryOrCreate
